# autonomous_paper_trading

./: .env.example  .gitignore  CLAUDE.md  README.md  core.py  goal.md  main.py  pyproject.toml  requirements.txt  results_factors_xs.json  v2.py  v3.py  v4.py  v5.py  v6.py
archive/: v0.py  v1.py
config/: books.yaml  curriculum.yaml  preferences.yaml  settings.yaml
core/: llm.py  preferences.py
docs/: architecture.md  openclaw-integration.md  paper-trading-setup.md  setup.md  strategies.md  v1.0.md  v1.1.md  v1.2.md  v1.3.md
evaluation/: backtester.py  metrics.py  multi_period.py  reporter.py  tournament.py
evolution/: cycle.py  planner.py  promoter.py  store.py
factors/: README.md
knowledge/: curriculum.py  evaluator.py  ingestion.py  learning_controller.py  learning_state.py  store.py  synthesizer.py  tools.py
project_memory/: current_context.md  lessons.md  progress.md
scripts/: ingest_books.py  purge_junk_knowledge.py  simulate_learning.py  split_alphas.py
src/: orchestrator.py  scheduler.py
src/core/: config.py  (+4 more)
strategies/: base.py  generator.py  indicators.py  registry.py  rsi_mean_reversion.py  sma_crossover.py  spec.py  template_engine.py
tests/: conftest.py  test_auditor.py  test_auditor_layer2.py  test_backtester.py  test_curriculum.py  test_data.py  test_evolution_cycle.py  test_evolution_integration.py  test_generator.py  test_indicators.py  test_knowledge_store.py  test_learning_controller.py  test_metrics.py  test_multi_period.py  test_paper_broker.py  test_preferences.py  test_promoter.py  test_risk.py  test_robustness.py  test_safety.py  test_spec.py  test_system_integration.py  test_template_engine.py  test_web_search.py
trading/: data.py  executor.py  paper_broker.py  risk.py
(+1522 files in other folders)
