[project]
name = "autonomous-trading"
version = "0.1.0"
description = "Autonomous trading agent with two-stage backtesting pipeline"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["network: tests requiring internet access"]
filterwarnings = [
    "ignore:.*multi-process optimization.*:RuntimeWarning:backtesting",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true
